# gor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  adrs.toml  clippy.toml  codecov.yml  deny.toml  justfile  kingfisher.yaml  rustfmt.toml  trivy.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.pi/skills/adrs/: SKILL.md
.pi/skills/gor-dev/: SKILL.md
.pi/skills/wrangler/: SKILL.md
docs/adr/: 0001-record-architecture-decisions.md  0002-use-gix-over-git2-for-git-operations.md  0003-rest-first-api-strategy-with-graphql-deferred.md  0004-sync-by-default-concurrency-model-using-reqwest-blocking.md  0005-multi-host-support-for-github-com-and-ghes-from-day-one.md  0006-use-rustls-instead-of-openssl-for-tls.md  0007-flag-driven-cli-with-no-interactive-prompts-in-v1.md  0008-error-handling-strategy-with-thiserror-anyhow-and-miette.md  0009-config-and-credential-storage-in-xdg-directory-with-os-keyring.md  README.md
docs/issues/: alias-delete.md  alias-list.md  alias-set.md  api-call.md  api-graphql.md  attestation-verify.md  auth-login.md  auth-logout.md  auth-setup-git.md  auth-status.md  auth-token.md  browse.md  cache-delete.md  cache-list.md  classroom.md  codespace-cp.md  codespace-create.md  codespace-delete.md  codespace-edit.md  codespace-list.md  codespace-logs.md  codespace-open.md  codespace-ports.md  codespace-rebuild.md  codespace-ssh.md  codespace-stop.md  codespace-view.md  completion.md  config.md  copilot.md  deployment-create.md  deployment-delete.md  deployment-list.md  deployment-status.md  deployment-view.md  environment-create.md  environment-delete.md  environment-edit.md  environment-list.md  extension-create.md  (+113 more)
docs/research/: api-implementation-roadmap.md  api-overview.md  research-architecture.md  research-cicd.md  research-deployment.md  research-docs.md  research-linting.md  research-testing.md  rust-best-practices-applied.md
src/: cli.rs  client.rs  config.rs  error.rs  host.rs  keyring_store.rs  lib.rs  main.rs  output.rs  repository.rs
src/auth/: device.rs  mod.rs  token.rs
src/cmd/: alias.rs  api.rs  attestation.rs  auth.rs  browse.rs  cache.rs  classroom.rs  codespace.rs  completion.rs  config.rs  copilot.rs  extension.rs  gist.rs  issue.rs  keys.rs  label.rs  mod.rs  org.rs  pr.rs  project.rs  release.rs  repo.rs  ruleset.rs  run.rs  search.rs  secret.rs  util.rs  variable.rs  workflow.rs
